client/src/components/Product/Product.css
.product-wrapper {
  margin-bottom: 70px;
  padding: 0px 20px;
}

#product {
  background-color: #eaecee;
  padding: 50px 40px;
}

hr {
  background-color: #eee;
}

.stock-badge {
  border-radius: 3px;
  color: #fff;
}

.in-stock-badge {
  background-color: #f76b1a;
}

.out-of-stock-badge {
  background-color: red;
}

.product-imgs img {
  width: 100%;
}

.feature-imgs {
  justify-content: space-evenly;
  margin-top: 20px;
}

.product-info {
  background-color: #f8f9f9;
}

.product-name-wishlist {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 0px;
}

#prod-name {
  max-width: 70%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.product-price,
.product-rating {
  padding: 10px 0px;
}

.product-rating {
  display: flex;
}

.product-features-reviews-specifications {
  margin: 0px;
  padding: 10px;
}

.product-owl-carousel {
  position: relative;
  z-index: -5;
  background-color: #fff !important;
}

.product-owl-carousel div img {
  width: 50px;
}

.add-to-cart {
  background-color: #f76b1a;
  color: #fff;
  height: 40px;
}

.add-to-cart:focus {
  outline: none;
  box-shadow: none;
}

.product-seller-store {
  /* display: flex; */
  padding-left: 10px;
}
.product-seller-store-icon {
  font-size: 60px;
  color: black;
}

.seller-recommendation-product {
  background-color: #fff;
  margin-bottom: 10px;
}

.seller-recommendation-product img {
  width: 100%;
}

.product-store {
  display: flex !important;
  flex-direction: row;
  align-items: center;
}

.product-store:hover {
  color: #f76b1a;
  text-decoration: underline;
}

.related-products {
  padding: 0px 25px;
}

.related-products-wrapper {
  overflow-y: hidden;
  white-space: nowrap;
  overflow-x: scroll;
  background-color: #fff;
  -webkit-overflow-scrolling: touch;
}

.related-products-wrapper a {
  color: #000;
}

.related-products-wrapper a:hover {
  color: #f76b1a;
  text-decoration: none;
}

.related-products-wrapper::-webkit-scrollbar {
  height: 5px !important;
}

.related-products-wrapper::-webkit-scrollbar-track {
  border-radius: 8px;
  -webkit-border-radius: 8px;
  background-color: transparent;
}

.related-products-wrapper::-webkit-scrollbar-thumb {
  height: 4px;
  width: 20px;
  background-color: #f76b1a !important;
  border-radius: 2px !important;
}

.related-product {
  width: 200px;
  margin: 0px 5px 10px 5px;
  display: inline-block;
  zoom: 1;
  float: none;
  text-align: center;
}

.related-product img {
  width: 100%;
}

.related-product-name {
  width: 100%;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-size: smaller;
}

@media screen and (max-width: 960px) {
  .product-wrapper {
    padding: 0;
  }
  #product {
    background-color: #f8f9f9;
    padding: 20px;
  }

  .product-info {
    padding: 20px 10px;
  }

  .product-features-reviews-specifications {
    margin: 0px;
    padding: 10px;
  }

  .product-features-reviews-specifications-sidebar {
    display: none;
  }

  .related-products {
    width: 100vw !important;
    padding: 0px;
  }
}

@media screen and (max-width: 540px) {
  .product-store .store-name {
    width: 300px !important;
  }
}

